--- a/src/component/DashBoard/dashboard.css
+++ b/src/component/DashBoard/dashboard.css
@@ -14,6 +14,24 @@
     text-align: center;
 }
 
+.cityName{
+    font-size: large;
+    font-weight: 500;
+    margin: 0;
+}
+
+.cityTime{
+    font-size: 6rem;
+    margin: 0;
+    font-weight: bolder;
+}
+
+.cityDate{
+    font-size: large;
+    margin: 0;
+    font-weight: 500;
+}
+
 .CurrentTem{
     position: absolute;
     height: 250px;
@@ -30,6 +48,17 @@
     
 }
 
+.cityTem{
+    font-size: 6rem;
+    margin: 0;
+    font-weight: bolder;
+}
+
+.cityFeel{
+    font-size: large;
+    margin: 0;
+    font-weight: 500;
+}
 
 
 .sunraise{
@@ -38,7 +67,7 @@
     margin: 10px;
 }
 
-.sunraise p{
+.sunraise span{
     padding: 5px;
     font-size: 1rem;
     font-weight: 900;
@@ -84,23 +113,7 @@
     margin-top: 0;
 }
 
-.cityName{
-    font-size: large;
-    font-weight: 500;
-    margin: 0;
-}
 
-.cityTime{
-    font-size: 6rem;
-    margin: 0;
-    font-weight: bolder;
-}
-
-.cityDate{
-    font-size: large;
-    margin: 0;
-    font-weight: 500;
-}
 
 
 .CurrentTemForcast{
